[END] css-flex-layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
 </head>
 
 <body>
+  <header>
+    <div class="container">
+      <div class="col-25 bg-blue"></div>
+      <div class="col-75 bg-red"></div>
+    </div>
+
+  </header>
+
+  <main>
+    <div class="container justify-space-between">
+      <div class="col-20 bg-silver"></div>
+      <div class="col-60 bg-goldenrod"></div>
+      <div class="col-20 bg-silver"></div>
+    </div>
+    <hr>
+    <div class="container gap-20">
+      <div class="col-20 bg-silver"></div>
+      <div class="col-60 bg-goldenrod"></div>
+      <div class="col-20 bg-silver"></div>
+    </div>
+  </main>
+  <!-- 
+  <div class="container">
+    <div class="left bg-blue"></div>
+    <div class="left bg-red"></div>
+  </div>
+  -->
 
 </body>
 
